--- a/css/styles2.css
+++ b/css/styles2.css
@@ -675,7 +675,7 @@ footer .boxForm{
    
 	.img-header{
 	   width: 100%;
-	   height: 215px;
+	   height: 234px;
    }
   .acerca-de{
   	padding:20px;
@@ -699,22 +699,22 @@ footer .boxForm{
   	height: 400px;
   }
 
-  .fundadores{
+  .developers{
   	margin-top: 50px;
   }
-  .content-fundadores{
+  .content-developers{
   	display: block;
   }
-  .fundadores > h2{
+  .developers > h2{
   	position: static;
   	color: var(--color1);
   	margin-bottom: 20px;
   }
-  .fundadores .Tony-container{
+  .developers .Tony-container{
     padding:50px 0px;
     width: 100%;
   }
-  .fundadores .oscar-container{
+  .developers .oscar-container{
   	padding:50px 0px;
   	width: 100%;
   }
